--- a/index.html
+++ b/index.html
@@ -143,12 +143,17 @@
     <!-- Interés Simple -->
     <div class="section">
       <h2>💰 Interés Simple</h2>
-      <label>Capital:</label>
-      <input type="number" id="capitalSimple" placeholder="Ej: 1000" />
-      <label>Tasa de interés anual (%):</label>
-      <input type="number" id="tasaSimple" placeholder="Ej: 5" />
-      <label>Tiempo (años):</label>
-      <input type="number" id="tiempoSimple" placeholder="Ej: 2" />
+      <label>¿Qué deseas calcular?</label>
+      <select id="calculoSimpleSelect" onchange="actualizarInputsInteresSimple()">
+        <option value="interes">Interés</option>
+        <option value="monto">Monto</option>
+        <option value="tiempo">Tiempo</option>
+        <option value="capital">Capital</option>
+      </select>
+
+      <div id="inputsSimple">
+        <!-- Inputs cambiarán según selección -->
+      </div>
       <button class="calc" onclick="calcularInteresSimple()">Calcular</button>
       <div class="result" id="resultadoSimple"></div>
     </div>
@@ -156,21 +161,41 @@
     <!-- Interés Compuesto -->
     <div class="section">
       <h2>📈 Interés Compuesto</h2>
-      <label>Capital:</label>
-      <input type="number" id="capitalComp" placeholder="Ej: 1000" />
-      <label>Tasa de interés anual (%):</label>
-      <input type="number" id="tasaComp" placeholder="Ej: 5" />
-      <label>Tiempo (años):</label>
-      <input type="number" id="tiempoComp" placeholder="Ej: 3" />
-      <label>Frecuencia de capitalización:</label>
-      <select id="frecuenciaComp">
-        <option value="1">Anual</option>
-        <option value="2">Semestral</option>
-        <option value="4">Trimestral</option>
-        <option value="12">Mensual</option>
+      <label>¿Qué deseas calcular?</label>
+      <select id="calculoCompuestoSelect" onchange="actualizarInputsInteresCompuesto()">
+        <option value="interes">Interés</option>
+        <option value="monto">Monto</option>
+        <option value="tiempo">Tiempo</option>
+        <option value="capital">Capital</option>
       </select>
+
+      <div id="inputsCompuesto">
+        <!-- Inputs cambiarán según selección -->
+      </div>
       <button class="calc" onclick="calcularInteresCompuesto()">Calcular</button>
       <div class="result" id="resultadoComp"></div>
+    </div>
+
+    <!-- Intereses y Tiempos Ordinario y Exacto -->
+    <div class="section">
+      <h2>📊 Interés Ordinario y Exacto con Tiempos Aproximado/Exacto</h2>
+      <label>¿Qué deseas calcular?</label>
+      <select id="calcIESelect" onchange="actualizarInputsIE()">
+        <option value="io_ta">Interés Ordinario (IO) - Tiempo Aproximado (360 días)</option>
+        <option value="io_te">Interés Ordinario (IO) - Tiempo Exacto (365 días)</option>
+        <option value="ie_ta">Interés Exacto (IE) - Tiempo Aproximado (360 días)</option>
+        <option value="ie_te">Interés Exacto (IE) - Tiempo Exacto (365 días)</option>
+      </select>
+
+      <label>Capital:</label>
+      <input type="number" id="capitalIE" placeholder="Ej: 1000" />
+      <label>Tasa de interés anual (%):</label>
+      <input type="number" id="tasaIE" placeholder="Ej: 5" />
+      <label>Días:</label>
+      <input type="number" id="diasIE" placeholder="Ej: 180" />
+
+      <button class="calc" onclick="calcularInteresIE()">Calcular</button>
+      <div class="result" id="resultadoIE"></div>
     </div>
 
     <!-- Descuento en Cadena -->
@@ -189,8 +214,221 @@
     function iniciarProyecto() {
       document.getElementById("pantallaInicio").style.display = "none";
       document.getElementById("contenidoPrincipal").style.display = "block";
+      actualizarInputsInteresSimple();
+      actualizarInputsInteresCompuesto();
+      actualizarInputsIE();
     }
 
+    // Actualización de inputs para Interés Simple
+    function actualizarInputsInteresSimple() {
+      const select = document.getElementById("calculoSimpleSelect");
+      const cont = document.getElementById("inputsSimple");
+      const calc = select.value;
+      let html = "";
+      switch(calc) {
+        case "interes":
+          html = `
+            <label>Capital:</label><input type="number" id="capitalSimple" placeholder="Ej: 1000" />
+            <label>Tasa de interés anual (%):</label><input type="number" id="tasaSimple" placeholder="Ej: 5" />
+            <label>Tiempo (años):</label><input type="number" id="tiempoSimple" placeholder="Ej: 2" />
+          `;
+          break;
+        case "monto":
+          html = `
+            <label>Capital:</label><input type="number" id="capitalSimple" placeholder="Ej: 1000" />
+            <label>Tasa de interés anual (%):</label><input type="number" id="tasaSimple" placeholder="Ej: 5" />
+            <label>Tiempo (años):</label><input type="number" id="tiempoSimple" placeholder="Ej: 2" />
+          `;
+          break;
+        case "tiempo":
+          html = `
+            <label>Capital:</label><input type="number" id="capitalSimple" placeholder="Ej: 1000" />
+            <label>Tasa de interés anual (%):</label><input type="number" id="tasaSimple" placeholder="Ej: 5" />
+            <label>Interés:</label><input type="number" id="interesSimple" placeholder="Ej: 100" />
+          `;
+          break;
+        case "capital":
+          html = `
+            <label>Interés:</label><input type="number" id="interesSimple" placeholder="Ej: 100" />
+            <label>Monto:</label><input type="number" id="montoSimple" placeholder="Ej: 1100" />
+            <label>Tiempo (años):</label><input type="number" id="tiempoSimple" placeholder="Ej: 2" />
+          `;
+          break;
+      }
+      cont.innerHTML = html;
+      document.getElementById("resultadoSimple").innerText = "";
+    }
+
+    // Actualización de inputs para Interés Compuesto
+    function actualizarInputsInteresCompuesto() {
+      const select = document.getElementById("calculoCompuestoSelect");
+      const cont = document.getElementById("inputsCompuesto");
+      const calc = select.value;
+      let html = "";
+      switch(calc){
+        case "interes":
+          html = `
+            <label>Capital:</label><input type="number" id="capitalComp" placeholder="Ej: 1000" />
+            <label>Tasa de interés anual (%):</label><input type="number" id="tasaComp" placeholder="Ej: 5" />
+            <label>Tiempo (años):</label><input type="number" id="tiempoComp" placeholder="Ej: 3" />
+            <label>Frecuencia de capitalización:</label>
+            <select id="frecuenciaComp">
+              <option value="1">Anual</option><option value="2">Semestral</option><option value="4">Trimestral</option><option value="12">Mensual</option>
+            </select>
+          `;
+          break;
+        case "monto":
+          html = `
+            <label>Capital:</label><input type="number" id="capitalComp" placeholder="Ej: 1000" />
+            <label>Tasa de interés anual (%):</label><input type="number" id="tasaComp" placeholder="Ej: 5" />
+            <label>Tiempo (años):</label><input type="number" id="tiempoComp" placeholder="Ej: 3" />
+            <label>Frecuencia de capitalización:</label>
+            <select id="frecuenciaComp">
+              <option value="1">Anual</option><option value="2">Semestral</option><option value="4">Trimestral</option><option value="12">Mensual</option>
+            </select>
+          `;
+          break;
+        case "tiempo":
+          html = `
+            <label>Capital:</label><input type="number" id="capitalComp" placeholder="Ej: 1000" />
+            <label>Tasa de interés anual (%):</label><input type="number" id="tasaComp" placeholder="Ej: 5" />
+            <label>Monto:</label><input type="number" id="montoComp" placeholder="Ej: 1500" />
+            <label>Frecuencia de capitalización:</label>
+            <select id="frecuenciaComp">
+              <option value="1">Anual</option><option value="2">Semestral</option><option value="4">Trimestral</option><option value="12">Mensual</option>
+            </select>
+          `;
+          break;
+        case "capital":
+          html = `
+            <label>Monto:</label><input type="number" id="montoComp" placeholder="Ej: 1500" />
+            <label>Tasa de interés anual (%):</label><input type="number" id="tasaComp" placeholder="Ej: 5" />
+            <label>Tiempo (años):</label><input type="number" id="tiempoComp" placeholder="Ej: 3" />
+            <label>Frecuencia de capitalización:</label>
+            <select id="frecuenciaComp">
+              <option value="1">Anual</option><option value="2">Semestral</option><option value="4">Trimestral</option><option value="12">Mensual</option>
+            </select>
+          `;
+          break;
+      }
+      cont.innerHTML = html;
+      document.getElementById("resultadoComp").innerText = "";
+    }
+
+    // Calculo Interés Simple
+    function calcularInteresSimple(){
+      const calc = document.getElementById("calculoSimpleSelect").value;
+      const res = document.getElementById("resultadoSimple");
+      function isPositiveNumber(value) {
+        return !isNaN(value) && value > 0;
+      }
+
+      if(calc === "interes"){
+        const capital = parseFloat(document.getElementById("capitalSimple").value);
+        const tasa = parseFloat(document.getElementById("tasaSimple").value)/100;
+        const tiempo = parseFloat(document.getElementById("tiempoSimple").value);
+        if(!isPositiveNumber(capital) || !isPositiveNumber(tasa) || !isPositiveNumber(tiempo)){
+          res.innerText = "Completa todos los campos con valores positivos.";
+          return;
+        }
+        const interes = capital * tasa * tiempo;
+        res.innerText = `Interés: $${interes.toFixed(2)}`;
+      }
+      else if(calc === "monto"){
+        const capital = parseFloat(document.getElementById("capitalSimple").value);
+        const tasa = parseFloat(document.getElementById("tasaSimple").value)/100;
+        const tiempo = parseFloat(document.getElementById("tiempoSimple").value);
+        if(!isPositiveNumber(capital) || !isPositiveNumber(tasa) || !isPositiveNumber(tiempo)){
+          res.innerText = "Completa todos los campos con valores positivos.";
+          return;
+        }
+        const monto = capital*(1 + tasa*tiempo);
+        res.innerText = `Monto: $${monto.toFixed(2)}`;
+      }
+      else if(calc === "tiempo"){
+        const capital = parseFloat(document.getElementById("capitalSimple").value);
+        const tasa = parseFloat(document.getElementById("tasaSimple").value)/100;
+        const interes = parseFloat(document.getElementById("interesSimple").value);
+        if(!isPositiveNumber(capital) || !isPositiveNumber(tasa) || !isPositiveNumber(interes)){
+          res.innerText = "Completa todos los campos con valores positivos.";
+          return;
+        }
+        const tiempo = interes/(capital*tasa);
+        res.innerText = `Tiempo: ${tiempo.toFixed(2)} años`;
+      }
+      else if(calc === "capital"){
+        const interes = parseFloat(document.getElementById("interesSimple").value);
+        const monto = parseFloat(document.getElementById("montoSimple").value);
+        const tiempo = parseFloat(document.getElementById("tiempoSimple").value);
+        if(!isPositiveNumber(interes) || !isPositiveNumber(monto) || !isPositiveNumber(tiempo)){
+          res.innerText = "Completa todos los campos con valores positivos.";
+          return;
+        }
+        const capital = monto - interes;
+        res.innerText = `Capital: $${capital.toFixed(2)}`;
+      }
+    }
+
+    // Calculo Interés Compuesto
+    function calcularInteresCompuesto(){
+      const calc = document.getElementById("calculoCompuestoSelect").value;
+      const res = document.getElementById("resultadoComp");
+      function isPositiveNumber(value) {
+        return !isNaN(value) && value > 0;
+      }
+
+      if(calc === "interes"){
+        const capital = parseFloat(document.getElementById("capitalComp").value);
+        const tasa = parseFloat(document.getElementById("tasaComp").value)/100;
+        const tiempo = parseFloat(document.getElementById("tiempoComp").value);
+        const n = parseInt(document.getElementById("frecuenciaComp").value);
+        if(!isPositiveNumber(capital) || !isPositiveNumber(tasa) || !isPositiveNumber(tiempo) || isNaN(n)){
+          res.innerText = "Completa todos los campos con valores positivos.";
+          return;
+        }
+        const monto = capital * Math.pow(1+tasa/n, n*tiempo);
+        const interes = monto - capital;
+        res.innerText = `Interés: $${interes.toFixed(2)}`;
+      }
+      else if(calc === "monto"){
+        const capital = parseFloat(document.getElementById("capitalComp").value);
+        const tasa = parseFloat(document.getElementById("tasaComp").value)/100;
+        const tiempo = parseFloat(document.getElementById("tiempoComp").value);
+        const n = parseInt(document.getElementById("frecuenciaComp").value);
+        if(!isPositiveNumber(capital) || !isPositiveNumber(tasa) || !isPositiveNumber(tiempo) || isNaN(n)){
+          res.innerText = "Completa todos los campos con valores positivos.";
+          return;
+        }
+        const monto = capital * Math.pow(1+tasa/n, n*tiempo);
+        res.innerText = `Monto: $${monto.toFixed(2)}`;
+      }
+      else if(calc === "tiempo"){
+        const capital = parseFloat(document.getElementById("capitalComp").value);
+        const tasa = parseFloat(document.getElementById("tasaComp").value)/100;
+        const monto = parseFloat(document.getElementById("montoComp").value);
+        const n = parseInt(document.getElementById("frecuenciaComp").value);
+        if(!isPositiveNumber(capital) || !isPositiveNumber(tasa) || !isPositiveNumber(monto) || isNaN(n) || monto <= capital){
+          res.innerText = "Completa todos los campos con valores positivos y asegúrate que el monto sea mayor que el capital.";
+          return;
+        }
+        const tiempo = Math.log(monto/capital)/(n*Math.log(1+tasa/n));
+        res.innerText = `Tiempo: ${tiempo.toFixed(2)} años`;
+      }
+      else if(calc === "capital"){
+        const monto = parseFloat(document.getElementById("montoComp").value);
+        const tasa = parseFloat(document.getElementById("tasaComp").value)/100;
+        const tiempo = parseFloat(document.getElementById("tiempoComp").value);
+        const n = parseInt(document.getElementById("frecuenciaComp").value);
+        if(!isPositiveNumber(monto) || !isPositiveNumber(tasa) || !isPositiveNumber(tiempo) || isNaN(n)){
+          res.innerText = "Completa todos los campos con valores positivos.";
+          return;
+        }
+        const capital = monto / Math.pow(1+tasa/n, n*tiempo);
+        res.innerText = `Capital: $${capital.toFixed(2)}`;
+      }
+    }
+
+    // Calculo Días
     function calcularDias() {
       const inicio = new Date(document.getElementById("fechaInicio").value);
       const fin = new Date(document.getElementById("fechaFin").value);
@@ -227,35 +465,7 @@
       resDiv.innerText = texto;
     }
 
-    function calcularInteresSimple() {
-      const capital = parseFloat(document.getElementById("capitalSimple").value);
-      const tasa = parseFloat(document.getElementById("tasaSimple").value) / 100;
-      const tiempo = parseFloat(document.getElementById("tiempoSimple").value);
-      const res = document.getElementById("resultadoSimple");
-      if (isNaN(capital) || isNaN(tasa) || isNaN(tiempo)) {
-        res.innerText = "Completa todos los campos.";
-        return;
-      }
-      const interes = capital * tasa * tiempo;
-      const monto = capital + interes;
-      res.innerText = `Interés: $${interes.toFixed(2)}\nMonto: $${monto.toFixed(2)}`;
-    }
-
-    function calcularInteresCompuesto() {
-      const capital = parseFloat(document.getElementById("capitalComp").value);
-      const tasa = parseFloat(document.getElementById("tasaComp").value) / 100;
-      const tiempo = parseFloat(document.getElementById("tiempoComp").value);
-      const n = parseInt(document.getElementById("frecuenciaComp").value);
-      const res = document.getElementById("resultadoComp");
-      if (isNaN(capital) || isNaN(tasa) || isNaN(tiempo) || isNaN(n)) {
-        res.innerText = "Completa todos los campos.";
-        return;
-      }
-      const monto = capital * Math.pow(1 + tasa / n, n * tiempo);
-      const interes = monto - capital;
-      res.innerText = `Interés: $${interes.toFixed(2)}\nMonto: $${monto.toFixed(2)}`;
-    }
-
+    // Calculo Descuento Cadena
     function calcularDescuentoCadena() {
       const original = parseFloat(document.getElementById("precioCadena").value);
       const arr = document.getElementById("descuentosCadena").value.split(',');
@@ -272,6 +482,61 @@
       const totalDesc = original - final;
       res.innerText = `Precio final: $${final.toFixed(2)}\nDescuento total: $${totalDesc.toFixed(2)}`;
     }
+
+    // Actualiza inputs de nuevo bloque IE
+    function actualizarInputsIE() {
+      // No dynamic inputs to update here - all inputs are static in markup
+      document.getElementById('resultadoIE').innerText = '';
+    }
+
+    // Calculo Interés Ordinario y Exacto con tiempos aproximado y exacto basados en 360 y 365
+    function calcularInteresIE() {
+      const tipo = document.getElementById('calcIESelect').value;
+      const capital = parseFloat(document.getElementById('capitalIE').value);
+      const tasa = parseFloat(document.getElementById('tasaIE').value) / 100;
+      const dias = parseFloat(document.getElementById('diasIE').value);
+      const res = document.getElementById('resultadoIE');
+
+      function isPositiveNumber(val) {
+        return !isNaN(val) && val > 0;
+      }
+
+      if(!isPositiveNumber(capital) || !isPositiveNumber(tasa) || !isPositiveNumber(dias)) {
+        res.innerText = "Completa todos los campos con valores positivos.";
+        return;
+      }
+
+      let tiempo;
+      let interes;
+      if(tipo === 'io_ta') {
+        // Interés Ordinario con Tiempo Aproximado (360 días/año)
+        tiempo = dias / 360;
+        interes = capital * tasa * tiempo;
+        res.innerText = `Interés Ordinario (Tiempo Aproximado - 360 días): $${interes.toFixed(2)}\nTiempo utilizado: ${tiempo.toFixed(4)} años`;
+      }
+      else if(tipo === 'io_te') {
+        // Interés Ordinario con Tiempo Exacto (365 días/año)
+        tiempo = dias / 365;
+        interes = capital * tasa * tiempo;
+        res.innerText = `Interés Ordinario (Tiempo Exacto - 365 días): $${interes.toFixed(2)}\nTiempo utilizado: ${tiempo.toFixed(4)} años`;
+      }
+      else if(tipo === 'ie_ta') {
+        // Interés Exacto con Tiempo Aproximado (360 días/año)
+        tiempo = dias / 360;
+        interes = capital * tasa * tiempo;
+        res.innerText = `Interés Exacto (Tiempo Aproximado - 360 días): $${interes.toFixed(2)}\nTiempo utilizado: ${tiempo.toFixed(4)} años`;
+      }
+      else if(tipo === 'ie_te') {
+        // Interés Exacto con Tiempo Exacto (365 días/año)
+        tiempo = dias / 365;
+        interes = capital * tasa * tiempo;
+        res.innerText = `Interés Exacto (Tiempo Exacto - 365 días): $${interes.toFixed(2)}\nTiempo utilizado: ${tiempo.toFixed(4)} años`;
+      }
+    }
+
+    document.getElementById('calcIESelect')?.addEventListener('change', actualizarInputsIE);
+
   </script>
 </body>
 </html>
+
